--- a/shop.html
+++ b/shop.html
@@ -5,7 +5,7 @@
 <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Deko - Digital Marketplace</title>
+        <title>Apex - Digital Marketplace</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -633,7 +633,7 @@
                         <div class="col-lg-8 col-md-9">
                             <div class="copyright-text">
                                 <div class="logo"><a href="index.html"><img src="assets/img/logo/fw_logo.png" alt=""></a></div>
-                                <p>Copyright &copy; 2022 Deko. All Rights Reserved.</p>
+                                <p>Copyright &copy; 2022 Apex. All Rights Reserved.</p>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-3 d-none d-md-block">
