--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                                     </div>
                                     <div class="header-action d-none d-sm-block">
                                         <ul>
-                                            <li class="header-mail"><i class="fas fa-bell"></i><a href="https://themebeyond.com/cdn-cgi/l/email-protection#f29b9c949db2978a979f829e97dc919d9f"><span class="__cf_email__" data-cfemail="472e29212807223f222a372b226924282a">[email&#160;protected]</span></a></li>
+                                            <li class="header-mail"><i class="fas fa-bell"></i><a href="mailto:info@apexcapitallimited.com"><span class="__cf_email__" data-cfemail="">info@apexcapitallimited.com</span></a></li>
                                             <li class="header-shop-cart"><a href="shop.html"><i class="fas fa-shopping-basket"></i><span>2</span></a>
                                                 <ul class="minicart">
                                                     <li class="d-flex align-items-center">
